--- a/src/backtest/backtest.ipynb
+++ b/src/backtest/backtest.ipynb
@@ -612,121 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Backtest Results:\n",
-      "\n",
-      "news Strategy:\n",
-      "  Final Portfolio Value: $10000.00\n",
-      "  Returns: 0.00%\n",
-      "\n",
-      "finance Strategy:\n",
-      "  Final Portfolio Value: $10000.00\n",
-      "  Returns: 0.00%\n",
-      "\n",
-      "tech Strategy:\n",
-      "  Final Portfolio Value: $10000.00\n",
-      "  Returns: 0.00%\n",
-      "\n",
-      "head Strategy:\n",
-      "  Final Portfolio Value: $10000.00\n",
-      "  Returns: 0.00%\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Convert 'date' to datetime\n",
-    "merged_df['date'] = pd.to_datetime(merged_df['date'])\n",
-    "\n",
-    "# Analysts list\n",
-    "analysts = ['news', 'finance', 'tech', 'head']\n",
-    "\n",
-    "# Initial capital\n",
-    "initial_capital = 10000\n",
-    "\n",
-    "# Store results\n",
-    "results = {}\n",
-    "\n",
-    "# Backtest for each analyst\n",
-    "for analyst in analysts:\n",
-    "    capital = initial_capital\n",
-    "    shares = 0\n",
-    "    transactions = []\n",
-    "\n",
-    "    for i in range(len(merged_df) - 1):\n",
-    "        recommendation = merged_df[analyst].iloc[i]\n",
-    "        open_price = merged_df['open'].iloc[i + 1]\n",
-    "\n",
-    "        if recommendation <= 4 and shares > 0:  # Sell signal\n",
-    "            capital += shares * open_price\n",
-    "            transactions.append({\n",
-    "                'date': merged_df['date'].iloc[i + 1],\n",
-    "                'action': 'sell',\n",
-    "                'price': open_price,\n",
-    "                'shares': shares,\n",
-    "                'capital': capital\n",
-    "            })\n",
-    "            shares = 0\n",
-    "            print(f'{analyst}: Sold {shares} shares at ${open_price:.2f}')\n",
-    "        elif recommendation >= 6 and capital >= open_price:  # Buy signal and enough capital\n",
-    "            shares = capital // open_price\n",
-    "            capital -= shares * open_price\n",
-    "            transactions.append({\n",
-    "                'date': merged_df['date'].iloc[i + 1],\n",
-    "                'action': 'buy',\n",
-    "                'price': open_price,\n",
-    "                'shares': shares,\n",
-    "                'capital': capital\n",
-    "            })\n",
-    "            print(f'{analyst}: Bought {shares} shares at ${open_price:.2f}')\n",
-    "\n",
-    "    # Close out any remaining shares on the last day.\n",
-    "    if shares > 0:\n",
-    "        capital += shares * merged_df['close'].iloc[-1]\n",
-    "        transactions.append({\n",
-    "            'date': merged_df['date'].iloc[-1],\n",
-    "            'action': 'sell',\n",
-    "            'price': merged_df['close'].iloc[-1],\n",
-    "            'shares': shares,\n",
-    "            'capital': capital\n",
-    "        })\n",
-    "        shares = 0\n",
-    "        print(f'{analyst}: Closed out {shares} shares at ${merged_df[\"close\"].iloc[-1]:.2f}')\n",
-    "\n",
-    "    # Calculate final portfolio value\n",
-    "    final_portfolio_value = capital\n",
-    "\n",
-    "    # Calculate returns\n",
-    "    returns = (final_portfolio_value - initial_capital) / initial_capital\n",
-    "\n",
-    "    results[analyst] = {\n",
-    "        'final_portfolio_value': final_portfolio_value,\n",
-    "        'returns': returns\n",
-    "    }\n",
-    "\n",
-    "# Display results\n",
-    "print(\"Backtest Results:\")\n",
-    "for analyst, result in results.items():\n",
-    "    print(f\"\\n{analyst} Strategy:\")\n",
-    "    print(f\"  Final Portfolio Value: ${result['final_portfolio_value']:.2f}\")\n",
-    "    print(f\"  Returns: {result['returns']:.2%}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -734,8 +620,9 @@
      "output_type": "stream",
      "text": [
       "buying power: 10000.00000\n",
-      "head: Bought 0.14845082288146758 shares at $67362.38 capital 0.00 - value bought 10000.00\n",
-      "capital: -1.0\n"
+      "head: Bought 0.14845082288146758 shares at $67362.38 capital 0.00 - value bought 10000.00, recommendation 6.0\n",
+      "head: Closed out 0 shares at $82713.36\n",
+      "===Return head: 0.22788662625093004===\n"
      ]
     }
    ],
@@ -747,15 +634,15 @@
     "analysts = ['news', 'finance', 'tech', 'head']\n",
     "\n",
     "transactions = []\n",
+    "final_return = {}\n",
     "initial_capital = 10000\n",
     "shares = 0\n",
     "capital = initial_capital\n",
     "results = {}\n",
     "\n",
     "for i in range(len(merged_df) - 1):\n",
-    "    recommendation = merged_df[\"news\"].iloc[i] # recommendation for the current day (t)\n",
+    "    recommendation = merged_df[analyst].iloc[i] # recommendation for the current day (t)\n",
     "    open_price = merged_df['open'].iloc[i + 1] # open price for the next day (t+1)\n",
-    "\n",
     "    if recommendation <= 4 and shares > 0:  # Sell signal\n",
     "        capital += shares * open_price\n",
     "        transactions.append({\n",
@@ -765,10 +652,10 @@
     "            'shares': shares,\n",
     "            'capital': capital\n",
     "        })\n",
-    "        print(f'{analyst}: Sold {shares} shares at ${open_price:.2f}, value sold {capital:.2f}')\n",
+    "        print(f'{analyst}: Sold {shares} shares at ${open_price:.2f}, value sold {capital:.2f}, recommendation {recommendation}')\n",
     "        shares = 0\n",
     "\n",
-    "    elif recommendation >= 6 and capital > 5000:  # Buy signal and enough capital\n",
+    "    elif recommendation >= 6 and capital > 1000:  # Buy signal and enough capital\n",
     "        print(f'buying power: {capital:.5f}')\n",
     "        shares = capital / open_price\n",
     "        capital -= shares * open_price\n",
@@ -779,10 +666,10 @@
     "            'shares': shares,\n",
     "            'capital': capital\n",
     "        })\n",
-    "        print(f'{analyst}: Bought {shares} shares at ${open_price:.2f} capital {capital:.2f} - value bought {shares * open_price - capital:.2f}')\n",
+    "        print(f'{analyst}: Bought {shares} shares at ${open_price:.2f} capital {capital:.2f} - value bought {shares * open_price - capital:.2f}, recommendation {recommendation}')\n",
     "\n",
     "\n",
-    "    if shares > 0 and merged_df['close'].iloc[i] == merged_df['date'].iloc[-1]:\n",
+    "    if shares > 0 and merged_df['date'].iloc[i] == merged_df['date'].iloc[-2]:\n",
     "        capital += shares * merged_df['close'].iloc[-1]\n",
     "        transactions.append({\n",
     "            'date': merged_df['date'].iloc[-1],\n",
@@ -794,35 +681,7 @@
     "        shares = 0\n",
     "        print(f'{analyst}: Closed out {shares} shares at ${merged_df[\"close\"].iloc[-1]:.2f}')\n",
     "\n",
-    "print(f'capital: {(capital / initial_capital)-1}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "count    68.000000\n",
-       "mean      6.257353\n",
-       "std       1.861817\n",
-       "min       3.000000\n",
-       "25%       4.000000\n",
-       "50%       7.000000\n",
-       "75%       8.000000\n",
-       "max      10.000000\n",
-       "Name: finance, dtype: float64"
-      ]
-     },
-     "execution_count": 122,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "merged_df[\"finance\"].describe()"
+    "print(f'===Return {analyst}: {(capital / initial_capital)-1}===')"
    ]
   },
   {
